--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -2,12 +2,22 @@
 %html
   %head
     %title ComicCollector
-    = stylesheet_link_tag :all
+    = stylesheet_link_tag 'compiled/screen.css', :media => 'screen, projection'
+    = stylesheet_link_tag 'compiled/print.css', :media => 'print'
+    /[if IE]
+      = stylesheet_link_tag 'compiled/ie.css', :media => 'screen, projection'
     = javascript_include_tag :defaults
     = csrf_meta_tag
   %body
-    #header
-    #content
-      = yield
-    #sidebar
+    #wrap
+      #header
+        #header-content
+          #logo Comic Collector!
+      #content
+        #main-content
+          = yield
+        #sidebar
+          Sidebar Here
     #footer
+      #footer-content
+        #copyright &copy; 2010 Startup Dot Com Associates
