adding basic user support with devise

--- a/app/views/layouts/application.html.haml
+++ b/app/views/layouts/application.html.haml
@@ -16,8 +16,13 @@
       #content
         #main-content
           = yield
+          %p.notice 
+            = notice
+          %p.alert
+            = alert
         #sidebar
           Sidebar Here
+
     #footer
       #footer-content
         #copyright &copy; 2010 Startup Dot Com Associates
